# lyricify-lyrics-provider-rs

./: .gitignore  Cargo.toml  README.md
src/: smtc_lyrics.rs
src/models/: track_metadata.rs
src/parsers/: applemusic.rs  mod.rs  spotify.rs
src/parsers/generate/: spotify.rs
src/providers/: applemusic.rs  mod.rs  netease.rs  spotify.rs
src/searchers/: applemusic.rs  kugou.rs  mod.rs  netease.rs  qqmusic.rs  soda_music.rs  spotify.rs
tests/: test_smtc_lyrics.rs  track.json
