[package]
name = "lyrix"
version = "26.4.7"
edition = "2021"
description = "High-performance lyrics tool"
license = "Apache-2.0"
repository = "https://github.com/cXp1r/Lyrix"
exclude = ["tests/"]

[dev-dependencies]
dialoguer = "0.11"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
urlencoding = "2"
base64 = "0.22"
flate2 = "1"
once_cell = "1"
memchr = "2"



aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = "0.1"
num-bigint = "0.4"
rand = "0.8"
md5 = "0.7"
hex = "0.4"
